Spell error corrected

--- a/pop_growth.html
+++ b/pop_growth.html
@@ -61,7 +61,7 @@ Density independent growth
 `$$\frac{dN}{dt}=rN$$`
 
 ---
-#Exponential growh
+#Exponential growth
 What is required for a population to grow?
 
 --
