--- a/pop_growth.html
+++ b/pop_growth.html
@@ -193,7 +193,7 @@ The differential equation tells us growth __rate__ not population size
 
 ---
 #Exponential growth
-The pooulation of an exponentially growing population at a given time `\(t\)` can be worked out by:
+The population of an exponentially growing population at a given time `\(t\)` can be worked out by:
 
 `$$N_t = N_0e^{rt}$$`
 Look familiar from assignment 1?
@@ -513,6 +513,8 @@ class: inverse, middle, center
 
 
 &lt;!-- &lt;iframe src="https://quinnasena.shinyapps.io/r_logistic/" width="100%" height="1024px"&gt;&lt;/iframe&gt; --&gt;
+
+&lt;!-- pagedown::chrome_print("pop_growth.Rmd", "growth_app/www/pop_growth.pdf")
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
