comment out code

--- a/pop_growth.html
+++ b/pop_growth.html
@@ -498,7 +498,8 @@ We have looked at:
   - Mathematical differences 
 
 - Many different population growth equations
-  - We have not talked about the model `\(N_{t+1} = \lambda N_t\left(1- \frac{N_t}{K} \right)\)`. I recommend reading about it
+  - We have not talked about the model `\(N_{t+1} = \lambda N_t\left(1- \frac{N_t}{K} \right)\)`.
+  I recommend reading about it
   - Concepts can be transferable but be aware while reading results may not be the same
   
 - This is just the beginning
@@ -514,7 +515,7 @@ class: inverse, middle, center
 
 &lt;!-- &lt;iframe src="https://quinnasena.shinyapps.io/r_logistic/" width="100%" height="1024px"&gt;&lt;/frame&gt; --&gt;
 
-&lt;!-- pagedown::chrome_print("pop_growth.Rmd", "growth_app/www/pop_growth.pdf")
+&lt;!-- pagedown::chrome_print("pop_growth.Rmd", "growth_app/www/pop_growth.pdf") --&gt;
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
