--- a/pop_growth.html
+++ b/pop_growth.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
+<html lang="" xml:lang="">
   <head>
     <title>Welcome to Population Ecology!</title>
     <meta charset="utf-8" />
@@ -13,7 +13,7 @@ class: center, middle, inverse, title-slide
 
 # Welcome to Population Ecology!
 ## ⚔<br/>
-### 14/08/2019
+### 14/08/2020
 
 ---
 
@@ -98,7 +98,7 @@ If we assume that immigration and emigration are equal, then the change in popul
 ]
 
 .pull-right[
-- More deaths than births the population dies
+- More deaths than births the population declines
 
 {{content}}
 ]
@@ -215,7 +215,7 @@ The discrete version of the exponential equation tells us the number added to th
 
 .pull-left[
 
-Theoretical populations of populations growing (and declining) as a result of different values of `\(r\)`
+Theoretical populations growing and declining as a result of different values of `\(r\)`
 
 - `\(r=0\)` no growth
 - `\(r&gt;0\)` positive growth 
@@ -255,7 +255,7 @@ Mangrove    | 0.00055                             | 3.5 years
 Southern beech | 0.000075                         | 25.3 years
 ---
 #Growth rates
-Population increases exponentially but __Growth rate__ over __population size__ increases proportionately with the population
+Population increases exponentially but __Growth rate__ over __population size__ increases proportionally with the population
 
 ![](pop_growth_files/figure-html/plot-chunk1-1.png)![](pop_growth_files/figure-html/plot-chunk1-2.png)
 ---
@@ -265,13 +265,14 @@ Population increases exponentially but __Growth rate__ over __population size__ 
 
 - The doubling time depends on the growth rate `\(r\)` and is _not_ every year
 
-- Surely no species can grow forever exponentially?!?!?!
+- ﴾͡๏̯͡๏﴿  Surely no species can grow forever exponentially?!?!?!
  - _Correct!_ Welcome to part 2, __density dependence__
 
 ---
 class: inverse, middle, center
 
 #Take 5 minutes to discuss the assumptions of the exponential growth model
+( ͡° ͜ʖ ͡°)
 
 ---
 class: inverse, middle, center
@@ -412,11 +413,11 @@ __Unlike__ the exponential model, the logistic model growth rate is dependent on
 ---
 #Logistic growth
 .pull-left[
-Logistic growth rate vs population size
+**Logistic** growth rate vs population size
 ]
 
 .pull-right[
-Exponential growth rate vs population size
+**Exponential** growth rate vs population size
 ]
 
 
@@ -427,6 +428,7 @@ Exponential growth rate vs population size
 class: inverse, middle, center
 
 #Take 5 minutes to discuss the assumptions of the logistic growth model
+(ᵔᴥᵔ)
 
 ---
 
@@ -453,6 +455,8 @@ Demographic stochasticity
 - By chance a population might have a run of births or a run of deaths
 - Demographic stochasticity includes the probability of births and deaths in the parameter `\(r\)`
 ]
+
+--
 
 - Variability can also be included in `\(K\)`, the carrying capacity!
 
@@ -507,9 +511,22 @@ We have looked at:
 
 ---
 
+# Top tips for the assignment
+
+- Attend labs and office hours
+
+- Understand the two key graphs: population vs time and growth-rate vs population
+
+- Use the app to understand different parameters (but do not use screenshots from the app for your assignment)
+
+- Rubbish in rubbish out. If model outputs look crazy or the numbers don't make logical sense then double check your inputs and equations.
+
+---
+
 class: inverse, middle, center
 
 #Go forth and model!!!
+\ (•◡•) /
 
 
 
@@ -562,9 +579,25 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     }
     deleted = true;
   });
-})();</script>
-
-<script>
+})();
+(function() {
+  "use strict"
+  // Replace <script> tags in slides area to make them executable
+  var scripts = document.querySelectorAll(
+    '.remark-slides-area .remark-slide-container script'
+  );
+  if (!scripts.length) return;
+  for (var i = 0; i < scripts.length; i++) {
+    var s = document.createElement('script');
+    var code = document.createTextNode(scripts[i].textContent);
+    s.appendChild(code);
+    var scriptAttrs = scripts[i].attributes;
+    for (var j = 0; j < scriptAttrs.length; j++) {
+      s.setAttribute(scriptAttrs[j].name, scriptAttrs[j].value);
+    }
+    scripts[i].parentElement.replaceChild(s, scripts[i]);
+  }
+})();
 (function() {
   var links = document.getElementsByTagName('a');
   for (var i = 0; i < links.length; i++) {
@@ -573,7 +606,23 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     }
   }
 })();
-</script>
+// adds .remark-code-has-line-highlighted class to <pre> parent elements
+// of code chunks containing highlighted lines with class .remark-code-line-highlighted
+(function(d) {
+  const hlines = d.querySelectorAll('.remark-code-line-highlighted');
+  const preParents = [];
+  const findPreParent = function(line, p = 0) {
+    if (p > 1) return null; // traverse up no further than grandparent
+    const el = line.parentElement;
+    return el.tagName === "PRE" ? el : findPreParent(el, ++p);
+  };
+
+  for (let line of hlines) {
+    let pre = findPreParent(line);
+    if (pre && !preParents.includes(pre)) preParents.push(pre);
+  }
+  preParents.forEach(p => p.classList.add("remark-code-has-line-highlighted"));
+})(document);</script>
 
 <script>
 slideshow._releaseMath = function(el) {
