--- a/pop_growth.html
+++ b/pop_growth.html
@@ -3,7 +3,8 @@
   <head>
     <title>Welcome to Population Ecology!</title>
     <meta charset="utf-8" />
-    <meta name="author" content="" />
+    <meta name="date" content="2021-04-08" />
+    <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/remark-css/default-fonts.css" rel="stylesheet" />
   </head>
@@ -13,7 +14,8 @@ class: center, middle, inverse, title-slide
 
 # Welcome to Population Ecology!
 ## ⚔<br/>
-### 14/08/2020
+### 
+### 04/08/2021
 
 ---
 
@@ -265,7 +267,7 @@ Population increases exponentially but __Growth rate__ over __population size__ 
 
 - The doubling time depends on the growth rate `\(r\)` and is _not_ every year
 
-- ﴾͡๏̯͡๏﴿  Surely no species can grow forever exponentially?!?!?!
+- (ง'̀-'́)ง﴿  Surely no species can grow forever exponentially?!?!?!
  - _Correct!_ Welcome to part 2, __density dependence__
 
 ---
