--- a/pop_growth.html
+++ b/pop_growth.html
@@ -195,14 +195,14 @@ The differential equation tells us growth __rate__ not population size
 
 ---
 #Exponential growth
-The population of an exponentially growing population at a given time `\(t\)` can be worked out by:
+The abundance of an exponentially growing population at a given time `\(t\)` can be worked out by:
 
 `$$N_t = N_0e^{rt}$$`
 Look familiar from assignment 1?
 
 --
 
-The discrete version of the exponential equation tells us the number added to the population per time-step:
+The discrete version of the exponential equation tells us the population per time-step:
 
 `$$N_{t+1} = N_t + r_dN_t$$`
 
@@ -267,7 +267,7 @@ Population increases exponentially but __Growth rate__ over __population size__ 
 
 - The doubling time depends on the growth rate `\(r\)` and is _not_ every year
 
-- (ง'̀-'́)ง﴿  Surely no species can grow forever exponentially?!?!?!
+- (ง'̀-'́)ง  Surely no species can grow forever exponentially?!?!?!
  - _Correct!_ Welcome to part 2, __density dependence__
 
 ---
@@ -322,7 +322,7 @@ If the population is very small, `\(N\)` is small relative to `\(K\)`, then the 
 However, as we learned from exponential growth, a population grows in proportion to its size.
 
   - A population of 1000 seabirds will produce more eggs than a population of 100.
-  - In the logistic growth equation the proportion added to the population decreases as the population grows reaching 0 when `\(N = K\)`
+  - In the logistic growth equation the proportion added to the population decreases as the population grows, reaching 0 when `\(N = K\)`
   
 
 
@@ -339,7 +339,7 @@ The point at which a population is the largest relative to the penalty for its s
 
 - What this means is the growth rate of a population is fastest at half its carrying capacity
   
-- As it grows bigger than `\(K/2\)` the penalty becomes stronger but below `\(K/2\)` the population is small and the proportion added to the population is small
+- As the population exceeds `\(K/2\)` the penalty increases but below `\(K/2\)` the population is small and the proportion added to the population is also small
 
 ---
 #Logistic growth
@@ -409,7 +409,7 @@ Remember how in the exponential model `\(N_{t+1} = 105\)` ?
 ---
 #Logistic growth
 
-__Unlike__ the exponential model, the logistic model growth rate is dependent on population size and reaches its peak at half of the carrying capacity 
+__Unlike__ the exponential model, in te logistic model, growth rate is dependent on population size and reaches its peak at half of the carrying capacity 
 
 ![](pop_growth_files/figure-html/plot-chunk3-1.png)![](pop_growth_files/figure-html/plot-chunk3-2.png)
 ---
@@ -448,8 +448,8 @@ Until now, everything we have looked at has been _entirely_ deterministic but is
 
 .pull-left[
 Environmental stochasticity
-- Populations go through good and bad times and are not constant
-- We can represent this by adding variance to the growth rate `\(r_d\)`
+- Populations go through good and bad times and population growth rate is not constant
+- We can represent this by adding variability to the growth rate `\(r_d\)`
 ]
 
 .pull-right[
@@ -489,7 +489,7 @@ We have looked at:
 - __Exponentially__ growing populations grow proportional to their size indefinitely
 
 - __Logistically__ growing populations experience a penalty that increases with population size
-  - Growth rate is greatest at half the carrying capacity when the population size is at its largest relative to the density penalty
+  - Growth rate is greatest at half the carrying capacity, when the population size is at its largest relative to the density penalty
   
 - __Stochasticity__ can have a serious effect on populations and deterministic models do not account for stochasticity
 
@@ -506,7 +506,7 @@ We have looked at:
 - Many different population growth equations
   - We have not talked about the model `\(N_{t+1} = \lambda N_t\left(1- \frac{N_t}{K} \right)\)`.
   
-  - Concepts can be transferable but be aware while reading results may not be the same
+  - Concepts can be transferable but be aware results may not be the same
   
 - This is just the beginning
   - Population growth models get _much much_ more complicated to deal with more complicated species, for example, age structured population and competition
@@ -521,7 +521,7 @@ We have looked at:
 
 - Use the app to understand different parameters (but do not use screenshots from the app for your assignment)
 
-- Rubbish in rubbish out. If model outputs look crazy or the numbers don't make logical sense then double check your inputs and equations.
+- Rubbish in rubbish out. If model outputs look crazy or the numbers don't make logical sense then double check your inputs and equations
 
 ---
 
